<resources>
    <string name="app_name">Nasa Photo Day</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Фото дня</string>
    <string name="nav_header_subtitle">api.nasa.gov</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_apod">Фото дня (Астр)</string>
    <string name="repeat_text">Повторить</string>
    <string name="title_text_example">Название</string>
    <string name="description_text_example">Описание к картинке</string>
    <string name="search_text">Найти в Википедии</string>
    <string name="helper_text">Тут Вы можете найти неизвестные слова</string>
    <string name="shared_preference_theme">theme_preference</string>
    <string name="key_theme_id">theme_id</string>
    <string name="menu_settings">Настройки</string>
    <string name="settings_theme_title">Тема</string>
    <string name="gray_theme">Серая тема</string>
    <string name="orange_theme">Оранжевая тема</string>
    <string name="copyright_text_example">copyright</string>
    <string name="copyright">Copyright:</string>
    <string name="identifier_text_example">identifier</string>
    <string name="caption_text_example">caption</string>
    <string name="date_text_example">date</string>
    <string name="date">Date:</string>
    <string name="menu_earth">Фото дня (Земля)</string>
    <string name="menu_mars">Фото дня (Марс)</string>
    <string name="camera_name_text_example">Название камеры</string>
    <string name="camera_full_name_text_example">Полное название камеры</string>
    <string name="rover_name_text_example">Название марсохода</string>
    <string name="rover_landing_date_text_example">rover_landing_data</string>
    <string name="rover_launch_date_text_example">rover_launch_date</string>
    <string name="status_text_example">status</string>
    <string name="epic_title">Фото дня (Земля)</string>
    <string name="mars_title">Фото дня (Марс)</string>
    <string name="apod_title">Фото дня (Астр)</string>
    <string name="settings_title">Настройки</string>
    <string name="menu_start">Главная</string>
    <string name="start_title">NASA Picture of the Day</string>
    <string name="apod">Фото дня</string>
    <string name="epic">Земля</string>
    <string name="mars">Марс</string>
    <string name="settings">Настройки</string>
    <string name="menu_notes">Заметки</string>
    <string name="notes_title">Заметки</string>
    <string name="note_text_example">Текст заметки</string>
    <string name="fab_description" />
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>