<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_picture_apod"
            android:icon="@drawable/ic_main_menu_apod"
            android:title="@string/menu_apod" />
        <item
            android:id="@+id/nav_picture_earth"
            android:icon="@drawable/ic_main_menu_earth"
            android:title="@string/menu_earth" />
        <item
            android:id="@+id/nav_picture_mars"
            android:icon="@drawable/ic_main_menu_mars"
            android:title="@string/menu_mars" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_main_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>