<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/theme_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_def"
        android:fontFamily="@font/caveat_bold"
        android:text="@string/settings_theme_title"
        android:textAlignment="center"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="@dimen/setting_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/theme_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_def"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_text">

        <RadioButton
            android:id="@+id/option_grey_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat_regular"
            android:text="@string/gray_theme"
            android:textSize="@dimen/settings_text_size" />

        <RadioButton
            android:id="@+id/option_orange_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat_regular"
            android:text="@string/orange_theme"
            android:textSize="@dimen/settings_text_size" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>