<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="?attr/card_style"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/mars_card_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@dimen/mars_card_width_percent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/photo_mars"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="@dimen/image_height_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_no_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero"
                android:layout_margin="@dimen/card_margin"
                android:ellipsize="end"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="?android:attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="@dimen/title_height_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo_mars"
                tools:text="@string/date_text_example" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/camera_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_text_def"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"
        tools:text="@string/camera_name_text_example" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/camera_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_text_def"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_name"
        tools:text="@string/camera_full_name_text_example" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rover_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_text_def"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_full_name"
        tools:text="@string/rover_name_text_example" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rover_landing_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_text_def"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rover_name"
        tools:text="@string/rover_landing_date_text_example" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rover_launch_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_text_def"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?android:attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rover_landing_date"
        tools:text="@string/rover_launch_date_text_example" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_text_def"
        android:ellipsize="end"
        android:gravity="bottom|center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rover_launch_date"
        tools:text="@string/status_text_example" />

</androidx.constraintlayout.widget.ConstraintLayout>