<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/motion_layout_padding_horizontal"
            app:layoutDescription="@xml/motion_scene"
            tools:context=".ui.pictureapod.ApodFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/wiki_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/img_margin_end"
                android:layout_marginBottom="@dimen/img_margin_bottom"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_layout"
                app:srcCompat="@drawable/ic_wikipedia" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_text_def"
                android:hint="@string/search_text"
                app:counterEnabled="true"
                app:counterMaxLength="@dimen/counter_max_length"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/helper_text"
                app:layout_constraintBottom_toTopOf="@+id/image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                style="?attr/card_style"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/zero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="@dimen/apod_card_height_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout"
                app:layout_constraintWidth_percent="@dimen/apod_card_width_percent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/photo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero"
                        android:scaleType="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="@dimen/image_height_percent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero"
                        android:ellipsize="end"
                        android:gravity="center_vertical|center_horizontal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="@dimen/title_height_percent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/photo"
                        tools:text="@string/title_text_example" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="?android:attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card"
                tools:text="@string/description_text_example" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_def"
                android:ellipsize="end"
                android:gravity="bottom|center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/orange_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                tools:text="@string/copyright_text_example" />


        </androidx.constraintlayout.motion.widget.MotionLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/card_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>